﻿- Spare single parents from early death (at least until the kids move out), to help prevent orphan households


Version 1.5.1

- Adjust options panel layout to accomodate longer translation strings


Version 1.5

- Add transport choices configuration editing to options panel
- Add saveable transport choices for eco residential
- Add configurable translation framework
- Add immigration options panel


Version 1.4.3

- Options panel now fully dynamic (created and destroyed on demand)
- Convert options panel layouts from UIHelper to manual layout
- Standardise logging


Version 1.4.2

- Fix sickness options panel layout not working with some panel-affecting mods
- Lifespan multiplier slider maximum extended to 15
- Performance improvement: deactivate options panel when not visible


Version 1.4.1

- Add options panel slider for lifespan multiplier
- Update bundled Cities Harmony to 1.0.5
- Improve Beta-main version conflict detection


Version 1.4

- Add vanilla lifecycle calculation option
- Extend hearse chance to deaths from sickness (as well as old age)
- Add option to enable/disable custom transport choices
- Add tabs to options panel
- Migrate to Harmony 2.0
- Add StartConnectionTransferImpl Transpiler by MacSergey
- Implement Harmony reverse patches for ResidentAI private methods
- Move mod initialisation from OnCreated to OnLoaded
- Overhaul error reporting and mod conflict notification
- Removed redundant logging detail


Version 1.3.7 -

- Add additional sickness chance logging.


Version 1.3.6 -

- Fix to illness calculation


Version 1.3.5 -

- Add options panel slider for hearse chance
- Add options panel sliders for sickness probabilities by decile
- Add update notification
- Add Harmony prefix prioritisation for AdvancedOutsideConnection compatibility
- Update namespace and project hierachy


Version 1.3.4 -

- Fix average citizen age sometimes not displaying correctly.


Version 1.3.3 -

- Minor correction to childbearing age


Version 1.3.2 -
